working on pages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "https://myusername.github.io/my-app",
+  "homepage": "https://myusername.github.io/frameworkreact",
   "version": "0.1.1",
   "private": false,
   "dependencies": {
