sometimes i really wonder how dumb i am (actually put myuser name in the link)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
+  "homepage": "https://zdeal1026.github.io/frameworkreact",
   "name": "portfolio",
-  "homepage": "https://myusername.github.io/frameworkreact",
   "version": "0.1.1",
   "private": false,
   "dependencies": {
