--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://zdeal1026.github.io/frameworkreact",
+  "homepage": "http://zdeal1026.github.io/frameworkreact",
   "name": "portfolio",
   "version": "0.1.1",
   "private": false,
@@ -41,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
   }
 }
